# Telegram-iOS

./: MODULE.bazel  README.md
.github/workflows/: build.yml
Telegram/: BUILD
build-system/: appstore-configuration.json  t3chatm-appstore-configuration.json
submodules/AccountContext/Sources/: PresentationCallManager.swift
submodules/CallListUI/Sources/: CallListController.swift
submodules/Display/Source/: GenerateImage.swift
submodules/MtProtoKit/: BUILD
submodules/MtProtoKit/PublicHeaders/MtProtoKit/: MT3CallShim.h  MTApiEnvironment.h  MtProtoKit.h
submodules/MtProtoKit/Sources/: MT3CallShim.m  MTApiEnvironment.m  MTTcpConnection.m
submodules/QrCodeUI/Sources/: QrCodeScreen.swift
submodules/SettingsUI/Sources/Data and Storage/: DataAndStorageSettingsController.swift  ProxyListSettingsController.swift  ProxyServerSettingsController.swift
submodules/TelegramCallsUI/Sources/: PresentationCallManager.swift
submodules/TelegramCore/Sources/Account/: Account.swift
submodules/TelegramCore/Sources/Network/: Network.swift
submodules/TelegramCore/Sources/Settings/: ProxySettings.swift
submodules/TelegramCore/Sources/SyncCore/: SyncCore_Localization.swift  SyncCore_ProxySettings.swift
submodules/TelegramUI/Components/PeerInfo/PeerInfoScreen/Sources/: PeerInfoSettingsItems.swift
submodules/TelegramUI/Components/ProxyServerPreviewScreen/Sources/: ProxyServerPreviewScreen.swift
submodules/TelegramUI/Sources/: AccountContext.swift  OpenResolvedUrl.swift  OpenUrl.swift
submodules/TelegramUI/Sources/Chat/: ChatControllerLoadDisplayNode.swift
submodules/TelegramVoip/: BUILD
submodules/TelegramVoip/Sources/: OngoingCallContext.swift
